fix spacing on nav

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
   color: #ffffff;
   padding: 20px;
